--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .*
 !/.gitignore
- !/Materia-de-aprendizaje/4_DataWrangling/1_data_extraction_nasa.ipynb 
+!/4_DataWrangling/1_data_extraction_nasa.ipynb 
+2_TextClassification/*
