--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .*
 !/.gitignore
 !/4_DataWrangling/1_data_extraction_nasa.ipynb 
-2_TextClassification/*
+Materia-de-aprendizaje/2_TextClassification/*
