--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
+!/.4_DataWrangling/1_data_extraction_nasa.ipynb 
+!/.Materia-de-aprendizaje/2_TextClassification/*
 .*
 !/.gitignore
-!/4_DataWrangling/1_data_extraction_nasa.ipynb 
-Materia-de-aprendizaje/2_TextClassification/*
