--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 5_DataMining/*
 6_DataViz
-!/.4_DataWrangling/1_data_extraction_nasa.ipynb 
-!/.Materia-de-aprendizaje/2_TextClassification/*
+4_DataWrangling/1_data_extraction_nasa.ipynb 
+Materia-de-aprendizaje/2_TextClassification/*
 .*
 !/.gitignore
